# Mero-Virtual-Saathi

./: .gitignore  A project report.docx  ARCHITECTURE.md  CMakeLists.txt  DOCUMENTATION.md  FINAL_CHECKLIST.md  FIXES.md  IMPROVEMENTS.md  LICENSE  PROJECT_SUMMARY.md  Project Presentation -Bit II.pptx  QUICKSTART.md  README.md  REFACTORING_SUMMARY.md  baackup c++.txt  documentation 2.docx  main.cpp  mainmenu.cpp  rishi.txt
Documentation/: README.md
Main/: Readme.md
Modules/: Readme.md
binFiles/: Readme.md
include/: console_ui.h  conversation.h  database.h  platform.h  platform_utils.h  response_generator.h  speech_analyzer.h  tts.h  types.h
scripts/: build.sh  install_dependencies.sh
src/: console_ui.cpp  conversation.cpp  database.cpp  main.cpp  platform.cpp  platform_utils.cpp  response_generator.cpp  speech_analyzer.cpp  tts.cpp
